# ChangeLog for net-analyzer/centreon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/centreon/ChangeLog,v 1.2 2008/03/28 23:21:56 hollow Exp $

  28 Mar 2008; Benedikt Böhm <hollow@gentoo.org> centreon-1.4.2.4.ebuild:
  fix typo

*centreon-1.4.2.4 (28 Mar 2008)

  28 Mar 2008; Benedikt Böhm <hollow@gentoo.org> +files/99_centreon.conf,
  +files/centreon.cron, +files/installoreon.conf.php, +files/ods.initd,
  +metadata.xml, +centreon-1.4.2.4.ebuild:
  initial ebuild
