@@ -7,13 +7,13 @@ AUX installoreon.conf.php 1561 RMD160 fdb73ab561c40335d481dec547c104d48224ac4e S
 AUX ods.initd 571 RMD160 b961865bc3530fc0e67b2179e8c4e651564dcea8 SHA1 afa32f103768680bb9d7d37178e376f4ed75179c SHA256 ce73be667b547e5ba3fe345b3962640daca8569a29d4c21920c44a37e7755021
 DIST centreon-1.4.2.4-path_sanity.patch.bz2 8548 RMD160 bcc2f815d6c89e2158ef63738d379c069be824c8 SHA1 f5703ed372312a59684b756b07ff70bc02ec53f9 SHA256 e8f947b87def3f0c15440deb95a1808fa7819b5b193ad8a655cb8d771f4c8cd4
 DIST centreon-1.4.2.4.tar.gz 3801410 RMD160 c59c84b1f9024e60dbbafd8e680091d8f60f9e74 SHA1 c2574c3d2bb2c7c2531b0fbd5ff6b81481a3deab SHA256 a14b27df0b247997996413087da81f71c3b90a6c094ea14b53574a5acd644371
-EBUILD centreon-1.4.2.4.ebuild 7134 RMD160 93ae7c85defd6ae3792c3d253cbf1d9e2d6ed037 SHA1 d506c1fc12fac0f865201f741c612c1c3420100c SHA256 f89a18d1e85622d3a657d1edd9d88c2880a4dbc63eba2ef626ad402c34df0ce0
-MISC ChangeLog 543 RMD160 8671e8dcdc6b103624aa3f142905ac8f94709e49 SHA1 0da75bd9d4a609254047a8462872a2a98a8491d5 SHA256 e5428c9df3cf0c12a1c17c6504b183b5f3c8c84d79d01635b7557acfe5cbe2e5
+EBUILD centreon-1.4.2.4.ebuild 7127 RMD160 198d44eed46dd1d8b5858f1aa19d05fa4a9422ec SHA1 52f5c9028ef397e57233da0dfafa9877b74ecc88 SHA256 31e5d92813fcd46f7c6e8ee614ad6a6d3e39770d6aa0c72b4629abfa4cdc3c96
+MISC ChangeLog 647 RMD160 794ed09c1a2b1741eb3578e3b3398c582a5efb9f SHA1 60e8d9dc2f0d27dbbb5bf7478d254048e827d7e7 SHA256 d7e6a56849c8d017133cb9c1c8157cf4b69a80e173f7178547bd38dcfbd8743d
 MISC metadata.xml 227 RMD160 b30c04f516f29ca17e9f5433bb990138285b6421 SHA1 d35966dc0c8fa3674b54519077680ac46bd6bd66 SHA256 445d8d1b65aa576b74df642f3e3ec9116183d76d8997511d817f0c9e1b977b5d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFH7X2cmPFBzbX68WERApYOAJ48g0ZiS2sxbIrzr4R67C2gMgWe5QCghtyx
-2FSrrGkNVqzCly8D/DTYpNk=
-=7+XM
+iD8DBQFH9JWimPFBzbX68WERArSGAJ9LkPRwVvuNLmGZfrwRKa+TIWw9uwCeKQD6
+DGqeDjWHfKwRzgYfbJLLSuk=
+=zmpQ
 -----END PGP SIGNATURE-----
