@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/centreon
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/centreon/ChangeLog,v 1.2 2008/03/28 23:21:56 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/centreon/ChangeLog,v 1.3 2008/04/03 08:30:17 hollow Exp $
+
+  03 Apr 2008; Benedikt Böhm <hollow@gentoo.org> centreon-1.4.2.4.ebuild:
+  fix use dependency checks
 
   28 Mar 2008; Benedikt Böhm <hollow@gentoo.org> centreon-1.4.2.4.ebuild:
   fix typo
